Backery V1.1(use min-height and the container div)

--- a/F_A_3_Bakery/index.html
+++ b/F_A_3_Bakery/index.html
@@ -10,6 +10,7 @@
 
     <!-- 1st Section -->
     <div class="home">
+
         <div>
             <img class="logo" src="Images/Backery_Logo.png" />
             <ul>
@@ -22,6 +23,7 @@
             </ul>
         </div>
 
+
         <div class="welcome">
             <p>Welcome to</p>
             <h1>Family Backery</h1>
@@ -33,20 +35,23 @@
     <!-- 2nd section -->
 
     <div class="About">
-        <div class="about-image"><img src="Images/Section2.jpg" alt="" /></div>
-        <div class="about-cap">
-            <h2>Who are we?</h2>
-            <p>We have been operating for over 30 years and are Members of The Federation of Master Builders. We
-                work on projects big and small from small residential extensions to full house. We are so happy with
-                this theme. Everyday it make our lives better.</p>
-            <div class="about-list">
-                <ul>
-                    <li>We care about environment.</li>
-                    <li>We are trusted by hundreds of clients.</li>
-                    <li>Social media loves us!</li>
-                    <li>This list is super easy to create.</li>
-                </ul>
+        <div class="container">
+            <div class="about-image"><img src="Images/Section2.jpg" alt="" /></div>
+            <div class="about-cap">
+                <h2>Who are we?</h2>
+                <p>We have been operating for over 30 years and are Members of The Federation of Master Builders. We
+                    work on projects big and small from small residential extensions to full house. We are so happy with
+                    this theme. Everyday it make our lives better.</p>
+                <div class="about-list">
+                    <ul>
+                        <li>We care about environment.</li>
+                        <li>We are trusted by hundreds of clients.</li>
+                        <li>Social media loves us!</li>
+                        <li>This list is super easy to create.</li>
+                    </ul>
+                </div>
             </div>
+
         </div>
 
 
@@ -54,23 +59,25 @@
 
     <!-- 3rd section -->
     <div class="Location">
-        <div class="whole-Section">
+        <div class="container">
+            <div class="location-content">
+                <h2>Our Location</h2>
+                <p class="P1">We have been operating for over 30 years and are Members of The Federation of Master
+                    Builders.
+                    We
+                    work on projects big and small from small residential extensions to full house. We are so happy with
+                    this theme. Everyday it make our lives better.</p>
 
-        </div>
-        <div class="location-content">
-            <h2>Our Location</h2>
-            <p class="P1">We have been operating for over 30 years and are Members of The Federation of Master Builders.
-                We
-                work on projects big and small from small residential extensions to full house. We are so happy with
-                this theme. Everyday it make our lives better.</p>
+                <p>Story on projects big and small from small residential extensions to full house. We are so happy with
+                    this theme. Everyday it make our lives better.</p>
 
-            <p>Story on projects big and small from small residential extensions to full house. We are so happy with
-                this theme. Everyday it make our lives better.</p>
+            </div>
 
-        </div>
+            <div class="location-image">
+                <img src="Images/Section3.jpg" alt="" />
 
-        <div class="location-image">
-            <img src="Images/Section3.jpg" alt="" />
+            </div>
+
 
         </div>
 
@@ -79,36 +86,39 @@
 
     <!-- 4th section -->
     <div class="Backing-Section">
-        <h3>Our Backing</h3>
-        <p>Learn more about them. We have worked truly hard to make them perfect for every use.</p>
-        <div class="meals">
-            <div class="meal">
-                <div class="inner">
-                    <img src="Images/Card1.jpg" alt="" />
-                    <h5>Superior Breads</h5>
-                    <p>Proin interdum, ante ut sollicitudin commodo, tellus quam sagittis libero, at semper mauris velit
-                        a velit. Phasellus commodo turpis et lacinia posuere.</p>
+        <div class="container">
+            <h3>Our Backing</h3>
+            <p>Learn more about them. We have worked truly hard to make them perfect for every use.</p>
+            <div class="meals">
+                <div class="meal">
+                    <div class="inner">
+                        <img src="Images/Card1.jpg" alt="" />
+                        <h5>Superior Breads</h5>
+                        <p>Proin interdum, ante ut sollicitudin commodo, tellus quam sagittis libero, at semper mauris
+                            velit
+                            a velit. Phasellus commodo turpis et lacinia posuere.</p>
 
+                    </div>
                 </div>
-            </div>
 
-            <div class="meal">
-                <div class="inner">
-                    <img src="Images/Card2.jpg" alt="" />
-                    <h5>Bagels</h5>
-                    <p>Proin interdum, ante ut sollicitudin commodo, tellus quam sagittis libero, at semper mauris
-                        velit a velit. Phasellus commodo turpis et lacinia posuere.</p>
+                <div class="meal">
+                    <div class="inner">
+                        <img src="Images/Card2.jpg" alt="" />
+                        <h5>Bagels</h5>
+                        <p>Proin interdum, ante ut sollicitudin commodo, tellus quam sagittis libero, at semper mauris
+                            velit a velit. Phasellus commodo turpis et lacinia posuere.</p>
 
+                    </div>
                 </div>
-            </div>
-            <div class="meal">
-                <div class="inner">
-                    <img src="Images/Card3.jpg" alt="" />
-                    <h5>Cookies</h5>
-                    <p>Proin interdum, ante ut sollicitudin commodo, tellus quam sagittis libero, at semper
-                        mauris velit
-                        a velit. Phasellus commodo turpis et lacinia posuere.</p>
+                <div class="meal">
+                    <div class="inner">
+                        <img src="Images/Card3.jpg" alt="" />
+                        <h5>Cookies</h5>
+                        <p>Proin interdum, ante ut sollicitudin commodo, tellus quam sagittis libero, at semper
+                            mauris velit
+                            a velit. Phasellus commodo turpis et lacinia posuere.</p>
 
+                    </div>
                 </div>
             </div>
         </div>
@@ -117,27 +127,29 @@
 
     <!-- 5th section -->
     <div class="Contact-info">
-        <div class="contact-map">
-            <iframe
-                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3454.5563113272538!2d31.419770375389813!3d30.020893974935476!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x14583d671f37c545%3A0x7a80af06ec5eb05f!2sTBS%20-The%20Bakery%20Shop!5e0!3m2!1sen!2seg!4v1727114190396!5m2!1sen!2seg"
-                width="600" height="490" style="border:0;" allowfullscreen="" loading="lazy"
-                referrerpolicy="no-referrer-when-downgrade"></iframe>
+        <div class="container">
+            <div class="contact-map">
+                <iframe
+                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3454.5563113272538!2d31.419770375389813!3d30.020893974935476!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x14583d671f37c545%3A0x7a80af06ec5eb05f!2sTBS%20-The%20Bakery%20Shop!5e0!3m2!1sen!2seg!4v1727114190396!5m2!1sen!2seg"
+                    width="600" height="490" style="border:0;" allowfullscreen="" loading="lazy"
+                    referrerpolicy="no-referrer-when-downgrade"></iframe>
 
-        </div>
-        <div class="contact-cap">
-            <h2>Contact Information</h2>
-            <p>I am text block. Click edit button to change this text. Lorem ipsum dolor sit amet, consectetur
-                adipiscing elit. Ut elit tellus, luctus nec ullamcorper mattis, pulvinar dapibus leo.</p>
-            <p>Our contact details</p>
-            <div class="contact-list">
-                <ul>
-                    <li>Manchester St 123-78B, Random 713, UK</li>
-                    <li>+46 123 456 789</li>
-                    <li>+37 431 456 789</li>
-                    <li>hello@sitename.com</li>
-                </ul>
             </div>
+            <div class="contact-cap">
+                <h2>Contact Information</h2>
+                <p>I am text block. Click edit button to change this text. Lorem ipsum dolor sit amet, consectetur
+                    adipiscing elit. Ut elit tellus, luctus nec ullamcorper mattis, pulvinar dapibus leo.</p>
+                <p>Our contact details</p>
+                <div class="contact-list">
+                    <ul>
+                        <li>Manchester St 123-78B, Random 713, UK</li>
+                        <li>+46 123 456 789</li>
+                        <li>+37 431 456 789</li>
+                        <li>hello@sitename.com</li>
+                    </ul>
+                </div>
 
+            </div>
         </div>
 
     </div>
@@ -147,7 +159,7 @@
 
     <!-- 6th section -->
     <div class="Footer">
-        <div class="Fcontainer">
+        <div class="container">
             <div class="FQ">
                 <h3>About</h3>
                 <p>I am text block. Click edit button to change this text. Lorem ipsum dolor sit amet, consectetur. I am
@@ -202,7 +214,7 @@
 
         <div class="info">
             <div class="info-cap">
-                <img src="Images/Backery_Logo.png"/>
+                <img src="Images/Backery_Logo.png" />
                 <p>Copyright 2017. All rights reserved.</p>
             </div>
         </div>
